[project]
name = "parkrun-monitoring"
version = "0.1.0"
description = "Track the parkrun events catalogue and weekly per-country statistics in a local SQLite database"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
parkrun-monitoring = "parkrun_monitoring.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
